--- a/CSharpToNative/CSharpToNative/CSharpToNative.csproj
+++ b/CSharpToNative/CSharpToNative/CSharpToNative.csproj
@@ -66,7 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="test.txt.tokens" />
+    <None Include="test.txt.tokens">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="test.txt" />
