--- a/CSharpToNative/CSharpToNative/CSharpToNative.csproj
+++ b/CSharpToNative/CSharpToNative/CSharpToNative.csproj
@@ -74,6 +74,12 @@
   <ItemGroup>
     <Content Include="test.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LinkerSegments\LinkerSegments.csproj">
+      <Project>{24e20c82-2c45-4ad7-8867-2c9ad83552d3}</Project>
+      <Name>LinkerSegments</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
