--- a/CSharpToNative/LinkerSegments/LinkerSegments.csproj
+++ b/CSharpToNative/LinkerSegments/LinkerSegments.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataSegment.cs" />
+    <Compile Include="EnumDataSizes.cs" />
     <Compile Include="Segment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
