--- a/CSharpToNative/ELFLib/ELFLib.csproj
+++ b/CSharpToNative/ELFLib/ELFLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24E20C82-2C45-4AD7-8867-2C9AD83552D3}</ProjectGuid>
+    <ProjectGuid>{AFDA37B8-7187-42F1-AEC1-EBB60946A7B0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LinkerSegments</RootNamespace>
-    <AssemblyName>LinkerSegments</AssemblyName>
+    <RootNamespace>ELFLib</RootNamespace>
+    <AssemblyName>ELFLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,8 +41,9 @@
   <ItemGroup>
     <Compile Include="DataSegment.cs" />
     <Compile Include="EnumDataSizes.cs" />
-    <Compile Include="Segment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Segment.cs" />
+    <Compile Include="ShsrtabSegment.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
