--- a/CSharpToNative/ELFLib/ELFLib.csproj
+++ b/CSharpToNative/ELFLib/ELFLib.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataSegment.cs" />
+    <Compile Include="ELFFile.cs" />
     <Compile Include="EnumDataSizes.cs" />
     <Compile Include="NullSegement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -48,6 +49,12 @@
     <Compile Include="SourceSegment.cs" />
     <Compile Include="Symbol.cs" />
     <Compile Include="SymTab.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpToNative\CSharpToNative.csproj">
+      <Project>{3d28d321-e3bc-4673-86e1-15ade77d027b}</Project>
+      <Name>CSharpToNative</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
