--- a/CSharpToNative/ELFLib/ELFLib.csproj
+++ b/CSharpToNative/ELFLib/ELFLib.csproj
@@ -57,6 +57,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /Y /S "$(SolutionDir)\ELFLib\bin\Debug\ELFLib.dll" "$(SolutionDir)CSharpToNative\bin\Debug"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
