--- a/CSharpToNative/ELFLib/ELFLib.csproj
+++ b/CSharpToNative/ELFLib/ELFLib.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CPUInfo.cs" />
     <Compile Include="DataSegment.cs" />
     <Compile Include="ELFFile.cs" />
     <Compile Include="EnumDataSizes.cs" />
