--- a/CSharpToNative/CSharpToNative/CSharpToNative.csproj
+++ b/CSharpToNative/CSharpToNative/CSharpToNative.csproj
@@ -97,14 +97,19 @@
     <Compile Include="EnumKeywords.cs" />
     <Compile Include="EnumOpcodes.cs" />
     <Compile Include="EnumOperator.cs" />
+    <Compile Include="EnumTokenFlags.cs" />
+    <Compile Include="EnumTokenType.cs" />
     <Compile Include="EnumTypes.cs" />
     <Compile Include="Instruction.cs" />
     <Compile Include="IRegisterSet.cs" />
+    <Compile Include="Lexer_Old.cs" />
     <Compile Include="Lexer.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringManipulation.cs" />
+    <Compile Include="Token.cs" />
+    <Compile Include="Tokeniser.cs" />
     <Compile Include="Tree.cs" />
     <Compile Include="TypeMismatchException.cs" />
     <Compile Include="Symbol.cs" />
