--- a/CSharpToNative/ELFLib/ELFLib.csproj
+++ b/CSharpToNative/ELFLib/ELFLib.csproj
@@ -88,9 +88,9 @@
     <Compile Include="SymTab.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CSharpToNative\CSharpToNative.csproj">
+    <ProjectReference Include="..\CSharpToNative\Compiler.csproj">
       <Project>{3d28d321-e3bc-4673-86e1-15ade77d027b}</Project>
-      <Name>CSharpToNative</Name>
+      <Name>Compiler</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
