--- a/CSharpToNative/CSharpToNative/Compiler.csproj
+++ b/CSharpToNative/CSharpToNative/Compiler.csproj
@@ -123,6 +123,12 @@
   <ItemGroup>
     <Content Include="test.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ELFLib\ELFLib.csproj">
+      <Project>{afda37b8-7187-42f1-aec1-ebb60946a7b0}</Project>
+      <Name>ELFLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
