--- a/CSharpToNative/CompilerTest/CompilerTest.csproj
+++ b/CSharpToNative/CompilerTest/CompilerTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="LexerTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokeniserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSharpToNative\Compiler.csproj">
