--- a/CSharpToNative/CSharpToNative/Compiler.csproj
+++ b/CSharpToNative/CSharpToNative/Compiler.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3D28D321-E3BC-4673-86E1-15ADE77D027B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CSharpToNative</RootNamespace>
-    <AssemblyName>CSharpToNative</AssemblyName>
+    <RootNamespace>Native_CSharp</RootNamespace>
+    <AssemblyName>Native-CSharp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Compile Include="AST.cs" />
     <Compile Include="ASTBranch.cs" />
+    <Compile Include="Block.cs" />
     <Compile Include="BracketErrorHandler.cs" />
     <Compile Include="Branch.cs" />
     <Compile Include="DefineTest.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="EnumTokenFlags.cs" />
     <Compile Include="EnumTokenType.cs" />
     <Compile Include="EnumTypes.cs" />
+    <Compile Include="Expression.cs" />
     <Compile Include="Instruction.cs" />
     <Compile Include="IRegisterSet.cs" />
     <Compile Include="Lexer_Old.cs" />
@@ -108,6 +110,7 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statement.cs" />
     <Compile Include="StringManipulation.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Tokeniser.cs" />
