--- a/CSharpToNative/Compiler.csproj
+++ b/CSharpToNative/Compiler.csproj
@@ -103,6 +103,7 @@
     <Compile Include="EnumTokenType.cs" />
     <Compile Include="EnumTypes.cs" />
     <Compile Include="Expression.cs" />
+    <Compile Include="IGlobalConstants.cs" />
     <Compile Include="Instruction.cs" />
     <Compile Include="IRegisterSet.cs" />
     <Compile Include="Lexer_Old.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scope.cs" />
     <Compile Include="Statement.cs" />
     <Compile Include="StringManipulation.cs" />
     <Compile Include="Token.cs" />
