--- a/ELFLib/ELFLib.csproj
+++ b/ELFLib/ELFLib.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{AFDA37B8-7187-42F1-AEC1-EBB60946A7B0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ELFLib</RootNamespace>
+    <RootNamespace>Native.CSharp.ELFLib</RootNamespace>
     <AssemblyName>ELFLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
