--- a/Linker/Linker.csproj
+++ b/Linker/Linker.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{40BF607B-DE72-4E99-B04D-097AA5F5C612}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Linker</RootNamespace>
+    <RootNamespace>Native.CSharp.Linker</RootNamespace>
     <AssemblyName>cslink</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
