--- a/CSharpToNative/Compiler.csproj
+++ b/CSharpToNative/Compiler.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scope.cs" />
     <Compile Include="Statement.cs" />
+    <Compile Include="StaticValues.cs" />
     <Compile Include="StringManipulation.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Tokeniser.cs" />
